fixed spacing issues

--- a/css/Main Mobile.css
+++ b/css/Main Mobile.css
@@ -148,7 +148,12 @@
 	}
 	
 	#digitalmainText {
-		font-size: 4vw;
+		font-size: 3.5vw;
+	}
+	
+	.previewText {
+		text-align: center;
+		font-size: 3vw !important;
 	}
 	
 	hr.line2 {
@@ -158,6 +163,10 @@
 	#showBtn {
 		font-size: 3vw;
 		padding: 5px 15px;
+	}
+	
+	.digitalSpacing {
+		margin-bottom: .5em !important;
 	}
 }
 
@@ -234,7 +243,7 @@
 	}
 	
 	#logoRow {
-		margin-top: 3em;
+		margin-top: 1em;
 	}
 	
 	#logoImg {
@@ -242,7 +251,7 @@
 	}
 	
 	#webRow {
-		margin-top: 3em;
+		margin-top: 1em;
 	}
 	
 	#bigbutton {
@@ -258,7 +267,7 @@
 	#designTitleMobile {
 		display: block;
 		width: 95%;
-		margin-bottom: 2em;
+		margin-bottom: 1em;
 	}
 	
 }
